@@ -20,6 +20,7 @@
  *
  * Authors:
  *   Radovan Sroka <rsroka@redhat.com>
+ *    Steve Grubb <sgrubb@redhat.com>
  */
 
 #include "config.h"
@@ -30,13 +31,20 @@
 #include <string.h>
 #include <ctype.h>
 #include <errno.h>
+#include <unistd.h>
+#include <fcntl.h>
+#include <sys/stat.h>
 #include "message.h"
+#include "file.h"
 
 #include "fapolicyd-backend.h"
 #include "llist.h"
+#include "file-backend.h"
 
 #define FILE_PATH "/etc/fapolicyd/fapolicyd.trust"
-#define BUFFER_SIZE 4096
+#define BUFFER_SIZE 4096+1+10+86
+#define FILE_READ_FORMAT  "%4096s %lu %86s"	// path size SHA256
+#define FILE_WRITE_FORMAT "%s %lu %s\n"		// path size SHA256
 
 static int file_init_backend(void);
 static int file_load_list(void);
@@ -157,5 +165,86 @@ static int file_destroy_backend(void)
 {
 	list_empty(&file_backend.list);
 	return 0;
+}
+
+
+/*
+ * This function will append a path string to the file trust database.
+ * it returns 0 on success, -1 on error, and 1 if a duplicate is found.
+ */
+int file_append(const char *path)
+{
+	FILE *f;
+	int fd, count, count2;
+	char *hash, *line, buffer[BUFFER_SIZE];
+	struct stat sb;
+
+	set_message_mode(MSG_STDERR, DBG_NO);
+	f = fopen(FILE_PATH, "r+");
+	if (f == NULL) {
+		msg(LOG_ERR, "Cannot open %s", FILE_PATH);
+		return -1;
+	}
+
+	fd = open(path, O_RDONLY);
+	if (fd < 0) {
+		msg(LOG_ERR, "Cannot open %s", path);
+		goto err_out2;
+	}
+
+	// Scan the file and look for a duplicate
+	while (fgets(buffer, BUFFER_SIZE, f)) {
+		char thash[87], tpath[4097];
+		long unsigned size;
+
+		sscanf(buffer, FILE_READ_FORMAT, tpath, &size, thash);
+		if (strcmp(tpath, path) == 0) {
+			msg(LOG_ERR, "%s is already in the database", path);
+			close(fd);
+			fclose(f);
+			return 1;
+		}
+	}
+
+	// No duplicate, make sure we are at the end
+	if (!feof(f))
+		fseek(f, 0, SEEK_END);
+
+	// Get the size
+	if (fstat(fd, &sb)) {
+		msg(LOG_ERR, "Cannot stat %s", path);
+		goto err_out;
+	}
+
+	// Get the hash
+	hash = get_hash_from_fd(fd);
+
+	// Format the output
+	count = asprintf(&line, FILE_WRITE_FORMAT, path, sb.st_size, hash);
+	if (count < 0) {
+		msg(LOG_ERR, "Cannot format entry for %s", path);
+		free(hash);
+		goto err_out;
+	}
+
+	// Write it to disk
+	if (fwrite(line, count, 1, f) != 1) {
+		msg(LOG_ERR, "failed writing to %s\n", FILE_PATH);
+		free(line);
+		free(hash);
+		goto err_out;
+	}
+	free(line);
+	free(hash);
+	close(fd);
+	fclose(f);
+
+	return 0;
+err_out:
+	close(fd);
+err_out2:
+	fclose(f);
+
+	return -1;
 }
 
